[package]
name = "wasmphobia"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasmphobia"
path = "src/main.rs"
doc = false

[profile.release]
debug = true
lto = true
codegen-units = 1

[dependencies]
addr2line = "0.22.0"
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
inferno = { version = "0.11.19", default-features = false, features = ["nameattr"] }
object = { version = "0.35.0", features = ["wasm"] }
