[package]
name = "wasmphobia"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasmphobia"
path = "src/main.rs"
doc = false

[profile.release]
debug = true
lto = true
codegen-units = 1

[dependencies]
addr2line = { version = "0.22.0", default-features = false, features = ["fallible-iterator", "std"] }
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
cpp_demangle = "0.4.3"
inferno = { version = "0.11.19", default-features = false, features = ["nameattr"] }
wasmparser = "0.207.0"

# Exposing transitive dependencies of `addr2line`
object = { version = "0.35.0", features = ["wasm"] }
rustc-demangle = "0.1.24"
